# classification-of-human-age

./: .gitattributes  CHANGELOG.md
.github/workflows/: main.yml  teams-notification.yml
AI/: .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml
AI/config/: .env  .env.template
AI/face/: .gitignore  .pre-commit-config.yaml  asgi.py  pyproject.toml
AI/face/config/: .env.template
AI/face/face/: settings.py  urls.py  wsgi.py
AI/face/predict/: apps.py
AI/face/predict/constants/: face_constant.py
AI/face/predict/models/: face_age_net.py
AI/face/predict/serializers/: upload_face_image_serializer.py
AI/face/predict/urls/: face_url.py
AI/face/predict/utils/: cloudinary_util.py  file_util.py
AI/face/predict/views/: face_view.py
AI/face/predict/weights/: face_age_net_weight.pt
AI/predict/constants/: face_constant.py
AI/predict/serializers/: upload_face_image_serializer.py
AI/predict/utils/: file_util.py
Backend/: .env.example.qa  .gitignore
Backend/src/config/: cloudinary.config.js
Backend/src/constants/: index.js
Backend/src/controllers/: admin.controller.js  index.js  media.controller.js
Backend/src/mappers/: media.mapper.js
Backend/src/middlewares/: admin-authorizer.js  index.js
Backend/src/routes/: admin-route.js  index.js  media-route.js
Backend/src/services/: auth.service.js  media.service.js  user.service.js
Mobile/: app.json  eas.json  package-lock.json  package.json
Website/: .env.development  .gitignore  Dockerfile  index.html  package-lock.json  package.json
Website/src/: App.tsx  main.tsx
(+116 files in other folders)
